force-app/main/default/objects/MAP_Scorecard__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <description>Used for Digital/Development and Website Project Manager Case Scorecard</description>
    <inlineHelpText>Did they communicate with the team effectively on clarifying needs, communicating time-frame for client, and letting the manager know when the case has been completed.</inlineHelpText>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>