force-app/main/default/objects/MAP_Scorecard__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>