force-app/main/default/objects/MAP_Scorecard__c/fields/Confirm_Next_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Next_Meeting_Date__c</fullName>
    <description>Used on the Partner Meeting and VMM Meeting Scorecards.</description>
    <inlineHelpText>Date and time confirmed. No vacations, etc… to account for.</inlineHelpText>
    <label>Confirm Next Meeting Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>