force-app/main/default/objects/MAP_Scorecard__c/fields/Confirm_Next_Meeting_Date_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Next_Meeting_Date_Feedback__c</fullName>
    <label>Confirm Next Meeting Date Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>