force-app/main/default/objects/MAP_Scorecard__c/fields/Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent__c</fullName>
    <description>Used on Sapper Appointment Scorecard</description>
    <label>Confirmation Email Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Phone (SDR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>