force-app/main/default/objects/MAP_Scorecard__c/fields/Confirmed_Next_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Next_Meeting__c</fullName>
    <description>Used for to score how many time the manager marked yes on the field Confirm Next Meeting Date on Partner Meeting Scorecards.</description>
    <formula>IF(ISPICKVAL( Confirm_Next_Meeting_Date__c ,&apos;Yes&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed Next Meeting</label>
    <type>Checkbox</type>
</CustomField>