force-app/main/default/objects/MAP_Scorecard__c/fields/Consistency_Feed__c.field-meta.xml
<CustomField>
    <fullName>Consistency_Feed__c</fullName>
    <label>Consistency Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>