force-app/main/default/objects/MAP_Scorecard__c/fields/Consistency_Score__c.field-meta.xml
<CustomField>
    <fullName>Consistency_Score__c</fullName>
    <label>Consistency Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>