force-app/main/default/objects/MAP_Scorecard__c/fields/Consistent_Creative_Use_of_Typography__c.field-meta.xml
<CustomField>
    <fullName>Consistent_Creative_Use_of_Typography__c</fullName>
    <inlineHelpText>Is typography used both creatively and consistently?</inlineHelpText>
    <label>Typography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>