force-app/main/default/objects/MAP_Scorecard__c/fields/Constructive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Constructive_Feedback__c</fullName>
    <inlineHelpText>EDITORS: Was constructive feedback provided?</inlineHelpText>
    <label>Constructive Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>