force-app/main/default/objects/MAP_Scorecard__c/fields/Constructive_Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Constructive_Feedback_Notes__c</fullName>
    <label>Constructive Feedback Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>