force-app/main/default/objects/MAP_Scorecard__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Additional Scorecards (Contact)</relationshipLabel>
    <relationshipName>Additional_Scorecards1</relationshipName>
    <type>Lookup</type>
</CustomField>