force-app/main/default/objects/MAP_Scorecard__c/fields/Contact_Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Call_Score__c</fullName>
    <formula>(CASE(Did_caller_end_intro_with_open_ended_que__c,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0)+
CASE(What_stopped_asking_second_question__c,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0)+
CASE(Is_this_call_accurately_marked__c,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0)+
CASE(Is_this_record_in_the_correct_phase__c,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0)+
CASE(Do_we_know_this_is_the_KDM__c,
&apos;Yes&apos;,1,
&apos;No&apos;,0,
0))/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Call Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>