force-app/main/default/objects/MAP_Scorecard__c/fields/Contact_CTA_are_Placed_Appropriately__c.field-meta.xml
<CustomField>
    <fullName>Contact_CTA_are_Placed_Appropriately__c</fullName>
    <inlineHelpText>Does the creative material promote the end goal of the client request?</inlineHelpText>
    <label>Goal Achievement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>