force-app/main/default/objects/MAP_Scorecard__c/fields/Contact_CTA_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Contact_CTA_Feedback__c</fullName>
    <label>Goal Achievement Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>