force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>Content_Audit_Score__c</fullName>
    <formula>( CASE( Accuracy_Variance__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Page_Structure_Variance__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Clarity_Variance__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Industry_Knowledge_Variance__c  ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Client_Knowledge_Variance__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Requirements_Variance__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0))/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Audit Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>