force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Flow_Defined_Followed__c.field-meta.xml
<CustomField>
    <fullName>Content_Flow_Defined_Followed__c</fullName>
    <inlineHelpText>Audited by: Marketing Manger / &quot;Project Manager&quot; |
Score Impacted: Editor Score</inlineHelpText>
    <label>Content Flow Defined &amp; Followed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>