force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Link__c.field-meta.xml
<CustomField>
    <fullName>Content_Link__c</fullName>
    <description>Used on Sapper Content Scorecard</description>
    <label>Content Link</label>
    <type>Url</type>
</CustomField>