force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Content_Quality_Score__c</fullName>
    <description>Used on the Sapper Content Scorecard</description>
    <formula>(CASE(Clear__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Concise__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Compelling__c	,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Clever__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Human__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Subject_Line__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Pain_Points__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Readability__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0)+
CASE(Cleanliness__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0))/18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Quality Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>