force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Score__c.field-meta.xml
<CustomField>
    <fullName>Content_Score__c</fullName>
    <formula>(CASE( Accuracy__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Page_Structure__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Clarity__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Industry_Knowledge__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Client_Knowledge__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE( Requirements__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0))/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>