force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Creative</fullName>
            </value>
            <value>
                <fullName>Email Library</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>LinkedIn In-Mails</fullName>
            </value>
            <value>
                <fullName>Monthly Social Media Calendar</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Outbound Asset</fullName>
            </value>
            <value>
                <fullName>Video Script</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Weekly Social Media Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>