force-app/main/default/objects/MAP_Scorecard__c/fields/Content_Writer__c.field-meta.xml
<CustomField>
    <fullName>Content_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards3</relationshipName>
    <type>Lookup</type>
</CustomField>