force-app/main/default/objects/MAP_Scorecard__c/fields/Copy_Editing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Copy_Editing_Feedback__c</fullName>
    <defaultValue>&apos;__Technicality (Copy/Editing) Feedback__&apos;&amp; BR() &amp; BR() &amp;&apos;__Storytelling &amp; Sales-Focused__&apos;</defaultValue>
    <label>Copy/Editing Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>