force-app/main/default/objects/MAP_Scorecard__c/fields/Copywriter_Score__c.field-meta.xml
<CustomField>
    <fullName>Copywriter_Score__c</fullName>
    <formula>(
	VALUE(TEXT(Technicality__c  ))+
	VALUE(TEXT(Storytelling_Sales_Focused__c  ))+
	IF(
		ISPICKVAL(
			Copywriter_Content_Engaging__c,
			&apos;NA&apos;
			),
		0,
		VALUE(TEXT(Copywriter_Content_Engaging__c))
		)
	)
	/
	(10+
	IF(
		ISPICKVAL(
			Copywriter_Content_Engaging__c,
			&apos;NA&apos;
			),
		0,
		5
		)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Impacted By: Part 1 (Editor)  &amp; Part 6 (Senior Auditor / &quot;Manager&quot;)</inlineHelpText>
    <label>Copywriter Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>