force-app/main/default/objects/MAP_Scorecard__c/fields/Could_anything_have_been_done_better__c.field-meta.xml
<CustomField>
    <fullName>Could_anything_have_been_done_better__c</fullName>
    <inlineHelpText>&quot;Could anything have been done better or does the process need to be improved?&quot;</inlineHelpText>
    <label>Could anything have been done better?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>