force-app/main/default/objects/MAP_Scorecard__c/fields/Coverage_of_Our_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Coverage_of_Our_Pipeline__c</fullName>
    <inlineHelpText>Effectiveness of coverage of Our Pipeline</inlineHelpText>
    <label>Coverage of Our Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>