force-app/main/default/objects/MAP_Scorecard__c/fields/Creative_Content_Shell__c.field-meta.xml
<CustomField>
    <fullName>Creative_Content_Shell__c</fullName>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>Is the Creative Content shell phase updated and marked published? Does it follow the proper naming convention? Are the published link and scheduled fields filled in correctly?</inlineHelpText>
    <label>Creative Content Shell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>