force-app/main/default/objects/MAP_Scorecard__c/fields/Creative_Content_Shell_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Creative_Content_Shell_Feedback__c</fullName>
    <defaultValue>&quot;Is the Creative Content shell phase updated and marked published? Does it follow the proper naming convention? Are the published link and scheduled fields filled in correctly?&quot;</defaultValue>
    <description>Digital QA Scorecard: Blog</description>
    <inlineHelpText>Is the Creative Content shell phase updated and marked published? Does it follow the proper naming convention? Are the published link and scheduled fields filled in correctly?</inlineHelpText>
    <label>Creative Content Shell Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>