force-app/main/default/objects/MAP_Scorecard__c/fields/Creative_Score__c.field-meta.xml
<CustomField>
    <fullName>Creative_Score__c</fullName>
    <formula>(CASE( Promotes_End_Goal_of_Client_Request__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE(  Consistent_Creative_Use_of_Typography__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE(  Appropriate_Use_of_Hierarchy__c  ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE(  Imagery_supports_the_client_s_industry__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0)+
CASE(  Contact_CTA_are_Placed_Appropriately__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0))/
(25-(CASE(Promotes_End_Goal_of_Client_Request__c ,
&quot;NA&quot;,5,0)+
CASE(Consistent_Creative_Use_of_Typography__c ,
&quot;NA&quot;,5,0)+
CASE(Appropriate_Use_of_Hierarchy__c,
&quot;NA&quot;,5,0)+
CASE(Imagery_supports_the_client_s_industry__c ,
&quot;NA&quot;,5,0)+
CASE(Contact_CTA_are_Placed_Appropriately__c,
&quot;NA&quot;,5,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creative Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>