force-app/main/default/objects/MAP_Scorecard__c/fields/Creativity_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Creativity_Feedback__c</fullName>
    <label>Creativity Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>