force-app/main/default/objects/MAP_Scorecard__c/fields/Credibility__c.field-meta.xml
<CustomField>
    <fullName>Credibility__c</fullName>
    <description>Used to score copywriter on Content Scorecard</description>
    <inlineHelpText>Are both client knowledge &amp; industry knowledge represented reputably &amp; accurately?</inlineHelpText>
    <label>Credibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>