force-app/main/default/objects/MAP_Scorecard__c/fields/Credibility_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Credibility_Feedback__c</fullName>
    <label>Credibility Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>