force-app/main/default/objects/MAP_Scorecard__c/fields/Credibility_Variance_Score__c.field-meta.xml
<CustomField>
    <fullName>Credibility_Variance_Score__c</fullName>
    <description>Content credibility variance score</description>
    <label>Credibility Variance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>