force-app/main/default/objects/MAP_Scorecard__c/fields/Current_Addendum_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Addendum_URL__c</fullName>
    <description>Used for Partner Operations Analyst Account Management score</description>
    <inlineHelpText>• Completed by the start of the 2nd business day after it was submitted</inlineHelpText>
    <label>2. Current Addendum URL Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>