force-app/main/default/objects/MAP_Scorecard__c/fields/Data_Collection__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection__c</fullName>
    <inlineHelpText>Surveys, Abstrakt Success Story, Client Success Story. Contract End Dates, PARDOT, etc..</inlineHelpText>
    <label>Data Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>