force-app/main/default/objects/MAP_Scorecard__c/fields/Data_Collection_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Feedback__c</fullName>
    <label>Data Collection Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>