force-app/main/default/objects/MAP_Scorecard__c/fields/Data_Studio_Report__c.field-meta.xml
<CustomField>
    <fullName>Data_Studio_Report__c</fullName>
    <inlineHelpText>Did you cover all relevant metrics in the data studio report?</inlineHelpText>
    <label>Data Studio Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>