force-app/main/default/objects/MAP_Scorecard__c/fields/Delivery_Director__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards2Ue8</relationshipName>
    <type>Lookup</type>
</CustomField>