force-app/main/default/objects/MAP_Scorecard__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description>Used for the Website Project Manger Quality Scorecard</description>
    <inlineHelpText>Design is consistent throughout and there are no errors or issues on desktop, tablet, or mobile.</inlineHelpText>
    <label>Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>