force-app/main/default/objects/MAP_Scorecard__c/fields/Design_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Design_Feedback__c</fullName>
    <defaultValue>&apos;__Technicality (Design)__&apos;&amp; BR() &amp; BR() &amp;
&apos;__Designed From a Sales Perspective__&apos;&amp; BR() &amp; BR() &amp;
&apos;__Cohesive with Brand and Past Pieces__&apos;</defaultValue>
    <description>Used for Website Project Manager Quality Scorecard</description>
    <label>Design Feedback</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>