force-app/main/default/objects/MAP_Scorecard__c/fields/Design_Proofer__c.field-meta.xml
<CustomField>
    <fullName>Design_Proofer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used on Collateral Review Scorecard</description>
    <label>Design Proofer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_ScorecardsXlNG</relationshipName>
    <type>Lookup</type>
</CustomField>