force-app/main/default/objects/MAP_Scorecard__c/fields/Designed_From_a_Sales_Perspective__c.field-meta.xml
<CustomField>
    <fullName>Designed_From_a_Sales_Perspective__c</fullName>
    <inlineHelpText>Audited by: Design Proofer
Score Impacted: Designer Score</inlineHelpText>
    <label>Designed From a Sales Perspective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>