force-app/main/default/objects/MAP_Scorecard__c/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Scorecards4</relationshipName>
    <type>Lookup</type>
</CustomField>