force-app/main/default/objects/MAP_Scorecard__c/fields/Designer_Design_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Designer_Design_Engaging__c</fullName>
    <inlineHelpText>Audited by: Senior Auditor (Manager)
Score Impacted: Designer Score</inlineHelpText>
    <label>Designer/Design Engaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>